# astudios

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  LICENSE  MANUAL.md  README.md  RELEASE.md  release.toml  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
.trae/rules/: project_rules.md
scripts/: release.sh
src/: api.rs  app_installer.rs  cli.rs  commands.rs  config.rs  detector.rs  downloader.rs  error.rs  installer.rs  lib.rs  list.rs  main.rs  model.rs  progress.rs
tests/: cli_tests.rs  error_tests.rs  model_tests.rs
tests/snapshots/: cli_tests__download_help_output.snap  cli_tests__help_output.snap  cli_tests__install_help_output.snap  cli_tests__installed_help_output.snap  cli_tests__invalid_command_error.snap  cli_tests__list_help_output.snap  cli_tests__open_help_output.snap  cli_tests__uninstall_help_output.snap  cli_tests__update_help_output.snap  cli_tests__use_help_output.snap  cli_tests__version_output.snap  cli_tests__which_help_output.snap  error_tests__error_categorization.snap  error_tests__error_context.snap  error_tests__error_variants.snap  error_tests__io_error_conversion.snap  error_tests__json_error_conversion.snap  error_tests__system_time_error_conversion.snap  error_tests__utf8_error_conversion.snap  model_tests__android_studio_model.snap  model_tests__android_studio_releases_list.snap  model_tests__android_studio_version_methods.snap  model_tests__channel_detection_results.snap  model_tests__channel_type_conversion.snap  model_tests__display_names.snap  model_tests__download_model.snap  model_tests__installed_display_info.snap  model_tests__release_channels.snap
