[package]
name = "as-man"
version = "0.1.0"
edition = "2024"
authors = ["as-man contributors"]
description = "Android Studio Manager - A CLI tool for managing Android Studio versions"
repository = "https://github.com/Binlogo/as-man"
license = "MIT"
keywords = ["android", "android-studio", "cli", "installer", "manager"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking"] }
quick-xml = { version = "0.32", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.17"
colored = "2.1"
dirs = "5.0"
zip = "2.2"
tar = "0.4"
flate2 = "1.0"
tempfile = "3.8"
plist = "1.7"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
