[package]
name = "astudios"
version = "0.1.1"
edition = "2024"
authors = ["astudios contributors"]
description = "A CLI tool for managing Android Studio versions"
repository = "https://github.com/astudios-org/astudios"
homepage = "https://github.com/astudios-org/astudios"
documentation = "https://docs.rs/astudios"
readme = "README.md"
license = "MIT"
keywords = ["android", "android-studio", "cli", "installer", "manager"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    ".github/",
    "tests/",
    "*.md",
    "release.toml"
]
rust-version = "1.89"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking"] }
quick-xml = { version = "0.38", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.18"
colored = "3.0"
dirs = "6.0"
zip = "5.1"
tempfile = "3.22"
plist = "1.8"

[dev-dependencies]
insta = { version = "1.43", features = ["yaml"] }
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.22"
strip-ansi-escapes = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
